draft-bryan-metalink-27

--- a/draft-bryan-metalink-27.html
+++ b/draft-bryan-metalink-27.html
@@ -153,12 +153,12 @@
 <tr><td class="header">Network Working Group</td><td class="header">A. Bryan</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">T. Tsujikawa</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">N. McNab</td></tr>
-<tr><td class="header">Expires: July 27, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Expires: August 1, 2010</td><td class="header">&nbsp;</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">P. Poeml</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Novell, Inc.</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">January 23, 2010</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">January 28, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />The Metalink Download Description Format<br />draft-bryan-metalink-26</h1>
+<h1><br />The Metalink Download Description Format<br />draft-bryan-metalink-28</h1>
 
 <h3>Abstract</h3>
 
@@ -189,7 +189,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on July 27, 2010.</p>
+This Internet-Draft will expire on August 1, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -331,8 +331,8 @@ Introduction</h3>
       available from.
 </p>
 <p>Often, identical copies of a file are accessible in multiple locations
-      on the Internet over a variety of protocols (FTP, HTTP, and
-      Peer-to-Peer).  In some cases, users are shown a list of these multiple
+      on the Internet over a variety of protocols, such as File Transfer Protocol (FTP), Hypertext Transfer Protocol (HTTP), and
+      Peer-to-Peer (P2P).  In some cases, users are shown a list of these multiple
       download locations (mirror servers) and must manually select one based on
       geographical location, priority, or bandwidth.  This is done to distribute
       the load across multiple servers, and to give human users the opportunity
@@ -518,14 +518,6 @@ start = metalinkMetalink</pre></div>
       Section 3.1 of <a class='info' href='#RFC3987'>[RFC3987]<span> (</span><span class='info'>Duerst, M. and M. Suignard, &ldquo;Internationalized Resource Identifiers (IRIs),&rdquo; January&nbsp;2005.</span><span>)</span></a>.
 </p>
 <p>Any element defined by this specification MAY have an
-      xml:base attribute <a class='info' href='#REC-xmlbase'>[REC&#8209;xmlbase]<span> (</span><span class='info'>Marsh, J. and R. Tobin, &ldquo;XML Base (Second Edition),&rdquo; January&nbsp;2009.</span><span>)</span></a>.
-      When xml:base is used in a Metalink Document, it serves the
-      function described in Section 5.1.1 of <a class='info' href='#RFC3986'>[RFC3986]<span> (</span><span class='info'>Berners-Lee, T., Fielding, R., and L. Masinter, &ldquo;Uniform Resource Identifier (URI): Generic Syntax,&rdquo; January&nbsp;2005.</span><span>)</span></a>,
-      establishing the base URI (or IRI) for resolving any relative
-      references found within the effective scope of the xml:base
-      attribute.
-</p>
-<p>Any element defined by this specification MAY have an
       xml:lang attribute, whose content indicates the natural language
       for the element and its descendents.  The language context is only
       significant for elements and attributes declared to be
@@ -537,7 +529,6 @@ start = metalinkMetalink</pre></div>
       <a name='anchor30'></a><a name='anchor31'></a></p>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 metalinkCommonAttributes =
-   attribute xml:base { metalinkUri }?,
    attribute xml:lang { metalinkLanguageTag }?,
    undefinedAttribute*</pre></div><p>
 
@@ -721,7 +712,7 @@ The &#34;metalink:file&#34; Element</h3>
 </p>
 <p>All <a class='info' href='#element.url'>metalink:url<span> (</span><span class='info'>The &#34;metalink:url&#34; Element</span><span>)</span></a> elements contained in each <a class='info' href='#element.file'>metalink:file<span> (</span><span class='info'>The &#34;metalink:file&#34; Element</span><span>)</span></a> element SHOULD lead to identical files. That is,
 	  each <a class='info' href='#element.url'>metalink:url<span> (</span><span class='info'>The &#34;metalink:url&#34; Element</span><span>)</span></a> element should be an alternative location for the same file and each 
-	  <a class='info' href='#element.metaurl'>metalink:metaurl<span> (</span><span class='info'>The &#34;metalink:metaurl&#34; Element</span><span>)</span></a> element should provide metadata to retrieve the same file in another way, such as a peer to peer network.
+	  <a class='info' href='#element.metaurl'>metalink:metaurl<span> (</span><span class='info'>The &#34;metalink:metaurl&#34; Element</span><span>)</span></a> element should provide metadata to retrieve the same file in another way, such as a peer to peer network. Refer to <a class='info' href='#element.url'>Section&nbsp;4.2.16<span> (</span><span class='info'>The &#34;metalink:url&#34; Element</span><span>)</span></a> and <a class='info' href='#element.metaurl'>Section&nbsp;4.2.8<span> (</span><span class='info'>The &#34;metalink:metaurl&#34; Element</span><span>)</span></a> for more information.
 
 	    <a name='anchor42'></a><a name='anchor43'></a></p>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
@@ -841,7 +832,7 @@ The &#34;type&#34; Attribute</h3>
 <p><a class='info' href='#element.pieces'>metalink:pieces<span> (</span><span class='info'>The &#34;metalink:pieces&#34; Element</span><span>)</span></a> elements MUST have a "type" attribute.
 		
 </p>
-<p>The IANA registry named "Hash Function Textual Names" defines values for hash types. See <a class='info' href='#security.hash'>Section&nbsp;7.4<span> (</span><span class='info'>Cryptographic Hashes</span><span>)</span></a> for security implications.
+<p>The Internet Assigned Numbers Authority (IANA) registry named "Hash Function Textual Names" defines values for hash types. See <a class='info' href='#security.hash'>Section&nbsp;7.4<span> (</span><span class='info'>Cryptographic Hashes</span><span>)</span></a> for security implications.
 </p>
 <a name="piece.length"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1091,7 +1082,7 @@ The &#34;priority&#34; Attribute</h3>
 The &#34;mediatype&#34; Attribute</h3>
 
 <p><a class='info' href='#element.metaurl'>metalink:metaurl<span> (</span><span class='info'>The &#34;metalink:metaurl&#34; Element</span><span>)</span></a> elements MUST have a "mediatype" attribute that indicates
-	    the MIME media type <a class='info' href='#RFC4288'>[RFC4288]<span> (</span><span class='info'>Freed, N. and J. Klensin, &ldquo;Media Type Specifications and Registration Procedures,&rdquo; December&nbsp;2005.</span><span>)</span></a> of the metadata available at the IRI. In the case of BitTorrent as specified in <a class='info' href='#BITTORRENT'>[BITTORRENT]<span> (</span><span class='info'>Cohen, B., &ldquo;The BitTorrent Protocol Specification,&rdquo; February&nbsp;2008.</span><span>)</span></a>, the value "torrent" is REQUIRED. Types without "/" are reserved. Currently, "torrent" is the only reserved value.
+	    the Multipurpose Internet Mail Extensions (MIME) media type <a class='info' href='#RFC4288'>[RFC4288]<span> (</span><span class='info'>Freed, N. and J. Klensin, &ldquo;Media Type Specifications and Registration Procedures,&rdquo; December&nbsp;2005.</span><span>)</span></a> of the metadata available at the IRI. In the case of BitTorrent as specified in <a class='info' href='#BITTORRENT'>[BITTORRENT]<span> (</span><span class='info'>Cohen, B., &ldquo;The BitTorrent Protocol Specification,&rdquo; February&nbsp;2008.</span><span>)</span></a>, the value "torrent" is REQUIRED. Types without "/" are reserved. Currently, "torrent" is the only reserved value.
 </p>
 <p>Values for this attribute are defined below in ABNF notation <a class='info' href='#RFC5234'>[RFC5234]<span> (</span><span class='info'>Crocker, D., Ed. and P. Overell, &ldquo;Augmented BNF for Syntax Specifications: ABNF,&rdquo; January&nbsp;2008.</span><span>)</span></a>.
 <a name='anchor82'></a><a name='anchor83'></a></p>
@@ -1412,11 +1403,9 @@ Processing Foreign Markup</h3>
 	      bypass the markup and any textual content and MUST NOT change
 	      their behavior as a result of the markup's presence.
 </p>
-<p>When unknown foreign markup is encountered in a Text
-	      Construct, software SHOULD ignore
-	      the markup and process any text content of foreign
-	      elements as though the surrounding markup were not
-	      present.
+<p>When unknown foreign markup is encountered in a Text Construct,
+          software SHOULD treat any text content of foreign elements as
+          though the surrounding foreign markup were not present.
 </p>
 <a name="extension"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
@@ -1723,8 +1712,6 @@ References</h3>
 <td class="author-text">Cowan, J. and R. Tobin, &ldquo;<a href="http://www.w3.org/TR/2004/REC-xml-infoset-20040204/">XML Information Set (Second Edition)</a>,&rdquo; W3C&nbsp;REC-xml-infoset-20040204, February&nbsp;2004.</td></tr>
 <tr><td class="author-text" valign="top"><a name="REC-xml-names">[REC-xml-names]</a></td>
 <td class="author-text">Hollander, D., Bray, T., Tobin, R., and A. Layman, &ldquo;<a href="http://www.w3.org/TR/2009/REC-xml-names-20091208/">Namespaces in XML 1.0 (Third Edition)</a>,&rdquo; W3C&nbsp;REC-xml-names-20091208, December&nbsp;2009.</td></tr>
-<tr><td class="author-text" valign="top"><a name="REC-xmlbase">[REC-xmlbase]</a></td>
-<td class="author-text">Marsh, J. and R. Tobin, &ldquo;<a href="http://www.w3.org/TR/2009/REC-xmlbase-20090128/">XML Base (Second Edition)</a>,&rdquo; W3C&nbsp;REC-xmlbase-20090128, January&nbsp;2009.</td></tr>
 <tr><td class="author-text" valign="top"><a name="REC-xmldsig-core">[REC-xmldsig-core]</a></td>
 <td class="author-text">Solo, D., Reagle, J., and D. Eastlake, &ldquo;<a href="http://www.w3.org/TR/2008/REC-xmldsig-core-20080610/">XML-Signature Syntax and Processing (Second Edition)</a>,&rdquo; W3C&nbsp;REC-xmldsig-core-20080610, June&nbsp;2008.</td></tr>
 <tr><td class="author-text" valign="top"><a name="RFC2119">[RFC2119]</a></td>
@@ -1820,7 +1807,6 @@ namespace xsd = "http://www.w3.org/2001/XMLSchema"
 # Common attributes
 
 metalinkCommonAttributes =
-   attribute xml:base { metalinkUri }?,
    attribute xml:lang { metalinkLanguageTag }?,
    undefinedAttribute*
 
@@ -2012,7 +1998,7 @@ extensionElement =
    simpleExtensionElement | structuredExtensionElement
 
 undefinedAttribute =
-  attribute * - (xml:base | xml:lang | local:*) { text }
+  attribute * - (xml:lang | local:*) { text }
 
 undefinedContent = (text|anyForeignElement)*
 
@@ -2043,7 +2029,19 @@ Document History (to be removed by RFC Editor before publication)</h3>
 <p>Known issues concerning this draft:
 	    </p>
 <ul class="text">
-<li>None.
+<li>Digital signatures, metalink:signature element, metalink:os element / using IANA "Operating System Names" registry.
+</li>
+<li>Waiting on: MIME type review.
+</li>
+</ul>
+
+<p>-27 : January 28, 2010.
+	    
+	    </p>
+<ul class="text">
+<li>Address IESG Comments and Discuss: Pasi Eronen and Dan Romascanu.
+</li>
+<li>Remove xml:base.
 </li>
 </ul>
 
@@ -2051,7 +2049,7 @@ Document History (to be removed by RFC Editor before publication)</h3>
 	    
 	    </p>
 <ul class="text">
-<li>Address IESG Comments and Discuss: Alexey Melnikov.
+<li>Address IESG Comments and Discuss: Alexey Melnikov, Lars Eggert.
 </li>
 </ul>
 
