draft-ietf-ippm-twamp-reflect-octets-09

--- a/draft-ietf-ippm-twamp-reflect-octets-09.html
+++ b/draft-ietf-ippm-twamp-reflect-octets-09.html
@@ -155,11 +155,11 @@
 <tr><td class="header">Network Working Group</td><td class="header">A. Morton</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">L. Ciavattone</td></tr>
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc5357'>5357</a> (if&nbsp;approved)</td><td class="header">AT&amp;T Labs</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">August 13, 2010</td></tr>
-<tr><td class="header">Expires: February 14, 2011</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">August 17, 2010</td></tr>
+<tr><td class="header">Expires: February 18, 2011</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
 <h1><br />TWAMP Reflect Octets
-    and Symmetrical Size Features<br />draft-ietf-ippm-twamp-reflect-octets-08</h1>
+    and Symmetrical Size Features<br />draft-ietf-ippm-twamp-reflect-octets-09</h1>
 
 <h3>Abstract</h3>
 
@@ -191,7 +191,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on February 14, 2011.</p>
+This Internet-Draft will expire on February 18, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -451,8 +451,9 @@ Reflect Octets: Request-TW-Session Packet Format</h3>
         the Type-P Descriptor.
 </p>
 <p>Note that the number of padding octets appended to the
-        Session-Reflector's test packet depends on support for the RECOMMENDED
-        truncation process in TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+        Session-Reflector's test packet depends on support for the truncation
+        process that TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>
+        recommends.
 </p>
 <p>The "Octets to be reflected" Field SHALL be 2 octets long, as shown
         and contains the octets that the Server MUST reflect in the Accept
@@ -471,12 +472,11 @@ Reflect Octets: Request-TW-Session Packet Format</h3>
 </p>
 <p>The "Padding Length" SHOULD be &gt;= 27 octets when specifying a
         test session using the Unauthenticated TWAMP-Test mode, to allow for
-        the RECOMMENDED truncation process in TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+        the truncation process that TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a> recommends.
 </p>
 <p>The "Padding Length" SHOULD be &gt;= 56 octets when specifying a
         test session using the Authenticated or Encrypted TWAMP-Test modes, to
-        allow for the RECOMMENDED truncation process in TWAMP section 4.2.1
-        <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+        allow for the truncation process that TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a> recommends.
 </p>
 <p>The "Padding Length" SHALL be &gt; the "Length of padding to
         reflect" when specifying a test session using the OPTIONAL Reflect
@@ -485,12 +485,12 @@ Reflect Octets: Request-TW-Session Packet Format</h3>
 <p>In Unauthenticated TWAMP-Test mode, the "Padding Length" SHALL be
         &gt;= 27 + "Length of padding to reflect" octets when specifying a
         test session using both the OPTIONAL Reflect Octets mode and the
-        RECOMMENDED truncation process in TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+        truncation process that TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a> recommends.
 </p>
 <p>In Authenticated or Encrypted TWAMP-Test modes, the "Padding
         Length" SHALL be &gt;= 56 + "Length of padding to reflect" octets when
         specifying a test session using both the OPTIONAL Reflect Octets mode
-        and the RECOMMENDED truncation process in TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a>.
+        and the truncation process that TWAMP section 4.2.1 <a class='info' href='#RFC5357'>[RFC5357]<span> (</span><span class='info'>Hedayat, K., Krzanowski, R., Morton, A., Yum, K., and J. Babiarz, &ldquo;A Two-Way Active Measurement Protocol (TWAMP),&rdquo; October&nbsp;2008.</span><span>)</span></a> recommends.
 </p>
 <a name="anchor6"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
