draft-ietf-dhc-dhcpv6-relay-supplied-options-08

--- a/draft-ietf-dhc-dhcpv6-relay-supplied-options-08.html
+++ b/draft-ietf-dhc-dhcpv6-relay-supplied-options-08.html
@@ -402,8 +402,8 @@
 <td class="right">Huawei</td>
 </tr>
 <tr>
-<td class="left">Expires: January 12, 2012</td>
-<td class="right">July 11, 2011</td>
+<td class="left">Expires: January 13, 2012</td>
+<td class="right">July 12, 2011</td>
 </tr>
 
     	
@@ -411,7 +411,7 @@
   </table>
 
   <p class="title">Relay-Supplied DHCP Options<br />
-  <span class="filename">draft-ietf-dhc-dhcpv6-relay-supplied-options-07</span></p>
+  <span class="filename">draft-ietf-dhc-dhcpv6-relay-supplied-options-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>DHCPv6 relay agents can not communicate with DHCPv6 clients directly.  However, in some cases, the relay agent possesses some information that would be useful to the DHCPv6 client. This document describes a mechanism whereby the DHCPv6 relay agent can provide such information to the DHCPv6 server, which can, in turn, pass this information on to the DHCP client.</p>
@@ -420,7 +420,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on January 12, 2012.</p>
+<p>This Internet-Draft will expire on January 13, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -521,7 +521,7 @@
 <a href="#rfc.section.5">5.</a> DHCP Relay Agent Behavior</h1>
 <p id="rfc.section.5.p.1">Relay agents MAY include a Relay-Supplied Options option in the option payload of a Relay-Forward message being sent toward a DHCP server.  When relaying the payload of Relay-Reply messages toward clients, Relay agents MUST NOT modify the payload.</p>
 <p id="rfc.section.5.p.2">Relay agents MUST NOT send non-RSOO-enabled options in the Relay- Supplied Options option.</p>
-<p id="rfc.section.5.p.3">Implementors of relay agents that support Relay-Supplied DHCP Options are strongly urged to implement a configuration parameter that determines whether or not they will relay a Relay-Forward message toward the DHCP server if it contains a Relay-Supplied Options option.</p>
+<p id="rfc.section.5.p.3">In order to allow network administrators to control the flow of RSOO options onto the network, relay agents that implement the Relay Supplied Options Option need to have a configuration parameter that determines to whether or not they will relay RSOO-containing Relay-Forward messages.</p>
 <p id="rfc.section.5.p.4">Relay agents that have this configuration parameter and that are configured to disable forwarding of Relay-Forward messages that contain a Relay-Supplied Options option MUST silently discard any such message.</p>
 <p id="rfc.section.5.p.5">Implementations that can be configured in this way MUST examine all Relay-Forward encapsulations, not just the outer encapsulation.</p>
 <h1 id="rfc.section.6">
