draft-ietf-krb-wg-clear-text-cred-02

--- a/draft-ietf-krb-wg-clear-text-cred-02.html
+++ b/draft-ietf-krb-wg-clear-text-cred-02.html
@@ -392,10 +392,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
-<td class="right">July 26, 2011</td>
+<td class="right">August 15, 2011</td>
 </tr>
 <tr>
-<td class="left">Expires: January 27, 2012</td>
+<td class="left">Expires: February 16, 2012</td>
 <td class="right"></td>
 </tr>
 
@@ -404,7 +404,7 @@
   </table>
 
   <p class="title">The Unencrypted Form Of Kerberos 5 KRB-CRED Message<br />
-  <span class="filename">draft-ietf-krb-wg-clear-text-cred-01</span></p>
+  <span class="filename">draft-ietf-krb-wg-clear-text-cred-02</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>The Kerberos 5 KRB-CRED message is used to transfer Kerberos credentials between applications.  When used with a secure transport the unencrypted form of the KRB-CRED message may be desirable.  This document describes the unencrypted form of the KRB-CRED message.  </p>
@@ -412,7 +412,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on January 27, 2012.</p>
+<p>This Internet-Draft will expire on February 16, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -420,20 +420,20 @@
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <p id="rfc.section.1.p.1">There are applications which need to transfer Kerberos credentials between them without having a prior relationship with established Kerberos keys.  When transferred over a transport that provides confidentiality and integrity, the unencrypted form of the KRB-CRED message MAY be used.  One application employing this method is the Kerberos attribute transport mechanism described in section 2.8 of the <a href="#sstc-saml-attribute-kerberos">SAML V2.0 Kerberos Attribute Profile</a> <cite title="NONE">[sstc-saml-attribute-kerberos]</cite>.  </p>
 <p id="rfc.section.1.p.2">In the SAML application, the Identity Provider (IdP) somehow obtains a Kerberos service ticket from the Kerberos Key Distribution Center (KDC) when required by the SAML system and transfers the credential to a Service Provider (SP) within an attribute statement.  The SP can then use the credential to access a Kerberos protected service.  </p>
-<p id="rfc.section.1.p.3">The Kerberos 5 specification as described in <a href="#RFC4120">[RFC4120]</a> mentions the non-standard legacy use of unencrypted KRB-CRED with Generic Security Services Application Programming Interface (GSS-API) <a href="#RFC1964">[RFC1964]</a> by the MIT, Heimdal, and Microsoft Kerberos implementations. This document provides a formal specification of the unencrypted form of the KRB-CRED message.  </p>
+<p id="rfc.section.1.p.3">The Kerberos 5 specification as described in <a href="#RFC4120">[RFC4120]</a> mentions the non-standard legacy use of unencrypted KRB-CRED with Generic Security Services Application Programming Interface (GSS-API) <a href="#RFC1964">[RFC1964]</a> by the MIT, Heimdal, and Microsoft Kerberos implementations. This document provides a formal specification of the unencrypted form of the KRB-CRED message to enable its continued use in new applications.  </p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> Requirements notation</h1>
 <p id="rfc.section.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.</p>
 <h1 id="rfc.section.3">
 <a href="#rfc.section.3">3.</a> The Unencrypted Form Of The KRB-CRED</h1>
-<p id="rfc.section.3.p.1">The unencrypted form of the KRB-CRED contains EncryptedData as defined in Section 5.2.9 <a href="#RFC4120">[RFC4120]</a>.  The encryption type (etype) MUST BE specified as 0.  The optional key version number (kvno) SHOULD NOT be present and MUST be ignored by the recipient if present.  The cipher text (cipher) is a copy of the EncKrbCredPart as defined in Section 5.8.1 <a href="#RFC4120">[RFC4120]</a> which is in clear text.  </p>
+<p id="rfc.section.3.p.1">The unencrypted form of the KRB-CRED contains EncryptedData as defined in Section 5.2.9 <a href="#RFC4120">[RFC4120]</a>.  The encryption type (etype) MUST be specified as 0.  The optional key version number (kvno) SHOULD NOT be present and MUST be ignored by the recipient if present.  The cipher text (cipher) is a copy of the EncKrbCredPart as defined in Section 5.8.1 <a href="#RFC4120">[RFC4120]</a> which is in clear text.  </p>
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> Kerberos Encryption Type 0 Is Not An Encryption System</h1>
 <p id="rfc.section.4.p.1">The Kerberos Encryption Type 0 is an invalid value <a href="#RFC3961">[RFC3961]</a>.  Layers above the encryption layer are left to interpret its use in their own context specific manner.  The use of encryption type 0 in the unencrypted form of the KRB-CRED is not to specify an encryption type.  In the context of the KRB-CRED it is a message specific indicator to be interpreted as the message is not encrypted.  This approach was chosen due to existing Kerberos implementations which conform to this specification.  </p>
 <h1 id="rfc.section.5">
 <a href="#rfc.section.5">5.</a> Security Considerations</h1>
 <p id="rfc.section.5.p.1">The KRB-CRED message contains sensitive information related to Kerberos credentials being transferred, such as their secret session keys, client and server principal names, and validity period. Possession of this information, along with the ticket itself, would allow an attacker to impersonate the client named in the ticket. The possibility of modification of the KRB-CRED enables the attacker to substitute the credentials. This can result in the recipient using the credentials of a client which was not intended.  As a result, the KRB-CRED message must be carefully safeguarded.  </p>
-<p id="rfc.section.5.p.2">The use of an unencrypted form of the KRB-CRED message MUST only be used with a transport where sender and recipient identities can been established to be known to each other. The transport MUST also provide confidentiality and integrity.  Examples of transports which MAY be securely used to transport an unencrypted KRB-CRED message would include Transport Layer Security (TLS) <a href="#RFC5246">[RFC5246]</a> where mutual authentication has been established and those encoded within encrypted and signed SAML <a href="#OASIS.saml-core-2.0-os">Security Assertion Markup Language (SAML) 2.0</a> <cite title="NONE">[OASIS.saml-core-2.0-os]</cite> statement.  </p>
+<p id="rfc.section.5.p.2">The use of an unencrypted form of the KRB-CRED message MUST only be used with a transport where sender and recipient identities can been established to be known to each other. The transport MUST also provide confidentiality, integrity, and end to end security.  Examples of transports which MAY be securely used to transport an unencrypted KRB-CRED message would include Transport Layer Security (TLS) <a href="#RFC5246">[RFC5246]</a> where mutual authentication has been established and those encoded within encrypted and signed SAML <a href="#OASIS.saml-core-2.0-os">Security Assertion Markup Language (SAML) 2.0</a> <cite title="NONE">[OASIS.saml-core-2.0-os]</cite> statement.  </p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#Acknowledgements" id="Acknowledgements">Acknowledgements</a>
 </h1>
