draft-ietf-ipsecme-failure-detection-08

--- a/draft-ietf-ipsecme-failure-detection-08.html
+++ b/draft-ietf-ipsecme-failure-detection-08.html
@@ -431,7 +431,7 @@
 <td class="right">D. Wierbowski</td>
 </tr>
 <tr>
-<td class="left">Expires: September 29, 2011</td>
+<td class="left">Expires: October 03, 2011</td>
 <td class="right">IBM</td>
 </tr>
 <tr>
@@ -448,7 +448,7 @@
 </tr>
 <tr>
 <td class="left"></td>
-<td class="right">March 28, 2011</td>
+<td class="right">April 01, 2011</td>
 </tr>
 
     	
@@ -456,7 +456,7 @@
   </table>
 
   <p class="title">A Quick Crash Detection Method for IKE<br />
-  <span class="filename">draft-ietf-ipsecme-failure-detection-07</span></p>
+  <span class="filename">draft-ietf-ipsecme-failure-detection-08</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document describes an extension to the IKEv2 protocol that allows for faster detection of Security Association (SA) desynchronization using a saved token.</p>
@@ -465,7 +465,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 29, 2011.</p>
+<p>This Internet-Draft will expire on October 03, 2011.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -773,6 +773,7 @@
 <li>The token maker MUST be able to re-generate or retrieve the token based on the IKE SPIs even after it reboots.</li>
 <li>The method of token generation MUST be such that a collision of QCD tokens between different pairs of IKE SPI will be highly unlikely.</li>
 </ul>
+<p id="rfc.section.5.p.3">For verification, the token taker makes a bitwise comparison of the token stored along with the IKE SA with the token sent in the unprotected message. Multihomed takers might flip back-and-forth between several addresses, and have their tokens replaced as described in <a href="#format_mob">Section 4.4</a>. To help avoid the case where the latest stored token does not match the address used after the maker lost state, the token taker MAY store several earlier tokens associated with the IKE SA, and silently discard the SA if any of them matches.</p>
 <h1 id="rfc.section.5.1">
 <a href="#rfc.section.5.1">5.1.</a> <a href="#tg1" id="tg1">A Stateless Method of Token Generation</a>
 </h1>
@@ -802,8 +803,8 @@
 
           </pre>
 <p id="rfc.section.5.2.p.3">The IPaddr-T field specifies the IP address of the token taker. Secret rollover considerations are similar to those in the previous section.</p>
-<p id="rfc.section.5.2.p.4">Note that with a multi-homed token taker, the QCD token matches just one of the token taker IP addresses. Usually this is not a problem, as packets sent to the token maker come out the same IP address. If for some reason this changes, then the token maker can replace the token as described in section 4.4.</p>
-<p id="rfc.section.5.2.p.5">There is a corner case where the token taker begins using a different IP address (because of multi-homing, roaming or normal network operations) and the token maker loses state before replacing the token. In that case, it will send a correct QCD token, but the token taker will still have the old token. In that case the extension will not work, and the peers will revert to RFC 5996 recovery.</p>
+<p id="rfc.section.5.2.p.4">Note that with a multi-homed token taker, the QCD token matches just one of the token taker IP addresses. Usually this is not a problem, as packets sent to the token maker come out the same IP address. If for some reason this changes, then the token maker can replace the token as described in section 4.4. If MOBIKE is used, replacing the tokens SHOULD be piggybacked on the INFORMATIONAL exchange with the UPDATE_SA_ADDRESSES notifications.</p>
+<p id="rfc.section.5.2.p.5">There is a corner case where the token taker begins using a new IP address (because of multi-homing, roaming or normal network operations) and the token maker loses state before replacing the token. In that case, it will send a correct QCD token, but the token taker will still have the old token. In that case the extension will not work, and the peers will revert to RFC 5996 recovery.</p>
 <h1 id="rfc.section.5.3">
 <a href="#rfc.section.5.3">5.3.</a> <a href="#toklifetime" id="toklifetime">Token Lifetime</a>
 </h1>
@@ -811,7 +812,7 @@
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> <a href="#backupgw" id="backupgw">Backup Gateways</a>
 </h1>
-<p id="rfc.section.6.p.1">Making crash detection and recovery quick is a worthy goal, but since rebooting a gateway takes a non-zero amount of time, many implementations choose to have a stand-by gateway ready to take over as soon as the primary gateway fails for any reason.  <a href="#cluster">[cluster]</a> describes considerations for such clusters of gateways with synchronized state, but the rest of this section is relevant even when there is no synchronized state.</p>
+<p id="rfc.section.6.p.1">Making crash detection and recovery quick is a worthy goal, but since rebooting a gateway takes a non-zero amount of time, many implementations choose to have a stand-by gateway ready to take over as soon as the primary gateway fails for any reason.  <a href="#RFC6027">[RFC6027]</a> describes considerations for such clusters of gateways with synchronized state, but the rest of this section is relevant even when there is no synchronized state.</p>
 <p id="rfc.section.6.p.2">If such a configuration is available, it is RECOMMENDED that the stand-by gateway be able to generate the same token as the active gateway. if the method described in <a href="#tg1">Section 5.1</a> is used, this means that the QCD_SECRET field is identical in both gateways. This has the effect of having the crash recovery available immediately.</p>
 <p id="rfc.section.6.p.3">Note that this refers to "high availability" configurations, where only one gateway is active at any given moment. This is different from "load sharing" configurations where more than one gateway is active at the same time. For load sharing configurations, please see <a href="#sec_trans">Section 9.2</a> for security considerations.</p>
 <h1 id="rfc.section.7">
@@ -1073,12 +1074,12 @@
 <tr>
 <td class="reference"><b id="2">[2]</b></td>
 <td class="top">
-<a title="Cisco">Detienne, F.</a>, <a title="Cisco">Sethi, P.</a> and <a title="Check Point">Y. Nir</a>, "<a href="http://tools.ietf.org/html/draft-detienne-ikev2-recovery">Safe IKE Recovery</a>", Internet-Draft draft-detienne-ikev2-recovery, January 2010.</td>
+<a title="Cisco">Detienne, F.</a>, <a title="Cisco">Sethi, P.</a> and <a title="Check Point">Y. Nir</a>, "<a href="http://tools.ietf.org/html/draft-detienne-ikev2-recovery">Safe IKE Recovery</a>", Internet-Draft draft-detienne-ikev2-recovery, July 2009.</td>
 </tr>
 <tr>
 <td class="reference"><b id="3">[3]</b></td>
 <td class="top">
-<a title="Check Point">Nir, Y.</a>, "<a href="http://tools.ietf.org/html/draft-ietf-ipsecme-ipsec-ha">IPsec Cluster Problem Statement</a>", Internet-Draft draft-ietf-ipsecme-ipsec-ha, July 2010.</td>
+<a title="Check Point">Nir, Y.</a>, "<a href="http://tools.ietf.org/html/rfc6027">IPsec Cluster Problem Statement</a>", RFC 6027, October 2010.</td>
 </tr>
 </tbody></table>
 <h1 id="rfc.appendix.Appendix A">
